# cod4-plugpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
include/cod4-plugpp/: CmdLine.hpp  Command.hpp  CriticalSection.hpp  Cvar.hpp  Exception.hpp  Kick.hpp  Optional.hpp  Plugin.hpp  PluginApi.h  PluginApi.hpp  PluginEntry.hpp  typeTraits.hpp  utils.hpp
include/cod4-plugpp/utils/: arithmetic.hpp  clientUtils.hpp  netUtils.hpp  stringUtils.hpp  timeUtils.hpp  utils.hpp
src/: Command.cpp  PluginEntry.cpp
tests/: CMakeLists.txt
tests/src/: arithmetic.cpp  cod4x-mock.cpp
